--- a/README
+++ b/README
@@ -5,3 +5,13 @@ Watch [Wikipedia's list of oldest living people](https://en.wikipedia.org/wiki/L
 Tweet when there's a new oldest person.
 
 Initial idea for the logic is keep a database of the seen top spots and tweet if the top spot has a *birth date* we have not yet seen (hedge against Wikipedia changing the *name* of the person in the top spot and triggering an errant tweet).
+
+Reference used on basic web scraper: https://medium.com/analytics-vidhya/web-scraping-a-wikipedia-table-into-a-dataframe-c52617e1f451.
+
+## Development
+
+Install [poetry](https://python-poetry.org/docs/#installation)
+
+`poetry install` from repo root. I used Python 3.9.
+
+`poetry run python index.py`
